{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 962,
  "lineage": "3a7eabde-2863-bbfd-3078-508386ac0531",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a8eee347abe73ee",
            "arn": "arn:aws:ec2:us-east-1:714167738697:elastic-ip/eipalloc-08a8eee347abe73ee",
            "domain": "vpc",
            "id": "eipalloc-08a8eee347abe73ee",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-213-167-222.compute-1.amazonaws.com",
            "public_ip": "18.213.167.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb409b5796f4c213",
            "arn": "arn:aws:ec2:us-east-1:714167738697:elastic-ip/eipalloc-0bb409b5796f4c213",
            "domain": "vpc",
            "id": "eipalloc-0bb409b5796f4c213",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-193-230.compute-1.amazonaws.com",
            "public_ip": "3.230.193.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rds-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066784287e358dad1",
            "arn": "arn:aws:ec2:us-east-1:714167738697:instance/i-03256e097dd8f35a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-03256e097dd8f35a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054abb07306df4e0f",
            "private_dns": "ip-141-0-1-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "141.0.1.74",
            "public_dns": "ec2-54-144-32-157.compute-1.amazonaws.com",
            "public_ip": "54.144.32.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0be64528de56a14e7",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d0b48b21609cd72",
            "tags": {
              "Name": "rds-instance"
            },
            "tags_all": {
              "Name": "rds-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000a4779d4cfa841a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance-profile",
            "aws_security_group.ec2-rds-security-group",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fiap-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:internet-gateway/igw-083df3c3b951e0b63",
            "id": "igw-083df3c3b951e0b63",
            "owner_id": "714167738697",
            "tags": {
              "Name": "fiap-vpc-igw"
            },
            "tags_all": {
              "Name": "fiap-vpc-igw"
            },
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a8eee347abe73ee",
            "association_id": "eipassoc-0792d357093a3073e",
            "connectivity_type": "public",
            "id": "nat-06b72d16e86a9abfe",
            "network_interface_id": "eni-07bfc465948d4d89b",
            "private_ip": "141.0.1.108",
            "public_ip": "18.213.167.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d0b48b21609cd72"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb409b5796f4c213",
            "association_id": "eipassoc-0452cf4bf5f8c7bc5",
            "connectivity_type": "public",
            "id": "nat-0b2a69edaf1f0df92",
            "network_interface_id": "eni-03e1a494bc7bd288c",
            "private_ip": "141.0.2.254",
            "public_ip": "3.230.193.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f5cf21cf01dcdf67"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05548d3e138ad51511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b72d16e86a9abfe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05548d3e138ad5151",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_nat_gateway.nats",
            "aws_route_table.private-tables",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cf140f4a8af051e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2a69edaf1f0df92",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf140f4a8af051e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_nat_gateway.nats",
            "aws_route_table.private-tables",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-083df3c3b951e0b63",
            "id": "r-rtb-04dbe7e669716fd951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04dbe7e669716fd95",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fiap-vpc-igw",
            "aws_route_table.public-table",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:route-table/rtb-05548d3e138ad5151",
            "id": "rtb-05548d3e138ad5151",
            "owner_id": "714167738697",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:route-table/rtb-0cf140f4a8af051e3",
            "id": "rtb-0cf140f4a8af051e3",
            "owner_id": "714167738697",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:route-table/rtb-04dbe7e669716fd95",
            "id": "rtb-04dbe7e669716fd95",
            "owner_id": "714167738697",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd2e27f044dbdec0",
            "route_table_id": "rtb-05548d3e138ad5151",
            "subnet_id": "subnet-0f700849f76720583"
          },
          "dependencies": [
            "aws_route_table.private-tables",
            "aws_subnet.private-subnet",
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d641a5f4bd44a5e9",
            "route_table_id": "rtb-0cf140f4a8af051e3",
            "subnet_id": "subnet-031b26d642ddaae1c"
          },
          "dependencies": [
            "aws_route_table.private-tables",
            "aws_subnet.private-subnet",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfa90115882b30f3",
            "route_table_id": "rtb-04dbe7e669716fd95",
            "subnet_id": "subnet-04d0b48b21609cd72"
          },
          "dependencies": [
            "aws_route_table.public-table",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0557efe54258e597e",
            "route_table_id": "rtb-04dbe7e669716fd95",
            "subnet_id": "subnet-0f5cf21cf01dcdf67"
          },
          "dependencies": [
            "aws_route_table.public-table",
            "aws_subnet.public-subnet",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:security-group/sg-000a4779d4cfa841a",
            "description": "Allow EC2 to access RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000a4779d4cfa841a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-rds-security-group",
            "name_prefix": "",
            "owner_id": "714167738697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-rds-security-group"
            },
            "tags_all": {
              "Name": "ec2-rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fiap-sec-groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fiap-vpc-security-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:security-group/sg-0c6a16e210000fa5f",
            "description": "Inbound \u0026 Outbound traffic for custom-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6a16e210000fa5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fiap-vpc-security-group",
            "name_prefix": "",
            "owner_id": "714167738697",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:security-group/sg-0af8b3879dab598a1",
            "description": "Allow inbound only via privates subnets traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "141.0.3.0/24",
                  "141.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0af8b3879dab598a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "141.0.3.0/24",
                  "141.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000a4779d4cfa841a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "714167738697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2-rds-security-group",
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:subnet/subnet-0f700849f76720583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "141.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f700849f76720583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714167738697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:subnet/subnet-031b26d642ddaae1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "141.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031b26d642ddaae1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714167738697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:subnet/subnet-04d0b48b21609cd72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "141.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d0b48b21609cd72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714167738697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:subnet/subnet-0f5cf21cf01dcdf67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "141.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5cf21cf01dcdf67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714167738697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01b56e364873948e0"
          },
          "dependencies": [
            "aws_vpc.fiap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fiap-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714167738697:vpc/vpc-01b56e364873948e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "141.0.0.0/16",
            "default_network_acl_id": "acl-000c476bd9e827fbb",
            "default_route_table_id": "rtb-0ddf59980871ab83b",
            "default_security_group_id": "sg-0605674a9af58703e",
            "dhcp_options_id": "dopt-0085f423ba39f244a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b56e364873948e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddf59980871ab83b",
            "owner_id": "714167738697",
            "tags": {
              "Name": "fiap-vpc"
            },
            "tags_all": {
              "Name": "fiap-vpc"
            }
          }
        }
      ]
    }
  ]
}